--- a/css/new-age.css
+++ b/css/new-age.css
@@ -3,9 +3,12 @@ body {
   width: 100%;
   height: 100%;
 }
+:root {
+  neon-green: #39FF14;
+}
 
 body {
-  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
+  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
 }
 
 a {
