--- a/css/new-age.css
+++ b/css/new-age.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
+  font-family: 'Century Gothic';
 }
 
 a {
