--- a/css/new-age.css
+++ b/css/new-age.css
@@ -3,23 +3,20 @@ body {
   width: 100%;
   height: 100%;
 }
-:root {
-  neon-green: #49fb35; !#39FF14;
-}
 
 body {
-  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
+  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
 }
 
 a {
-  color: #8cfd0f;
+  color: #fdcc52;
   -webkit-transition: all .35s;
   -moz-transition: all .35s;
   transition: all .35s;
 }
 
 a:hover, a:focus {
-  color: #8cfd0f;
+  color: #fcbd20;
 }
 
 hr {
@@ -39,7 +36,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
+  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
 }
@@ -64,20 +61,20 @@ section h2 {
   -webkit-transition: all .35s;
   -moz-transition: all .35s;
   transition: all .35s;
-  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
+  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 #mainNav .navbar-brand {
-  color: #49fb35;
-  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
+  color: #fdcc52;
+  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
-  color: #49fb35;
+  color: #fcbd20;
 }
 
 #mainNav .navbar-toggler {
@@ -88,13 +85,13 @@ section h2 {
 
 #mainNav .navbar-nav > li > a {
   font-size: 11px;
-  font-family: 'Century Gothic', 'CenturyGothic', 'AppleGothic', 'sans-serif';
+  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 
 #mainNav .navbar-nav > li > a.active {
-  color: #49fb35 !important;
+  color: #fdcc52 !important;
   background-color: transparent;
 }
 
@@ -109,7 +106,7 @@ section h2 {
 
 #mainNav .navbar-nav > li > a:hover,
 #mainNav .navbar-nav > li > a:focus:hover {
-  color: #49fb35;
+  color: #fdcc52;
 }
 
 @media (min-width: 992px) {
@@ -125,7 +122,7 @@ section h2 {
   }
   #mainNav .navbar-nav > li > a,
   #mainNav .navbar-nav > li > a:focus {
-    color: white;
+    color: rgba(255, 255, 255, 0.7);
   }
   #mainNav .navbar-nav > li > a:hover,
   #mainNav .navbar-nav > li > a:focus:hover {
@@ -133,21 +130,21 @@ section h2 {
   }
   #mainNav.navbar-shrink {
     border-color: rgba(34, 34, 34, 0.1);
-    background-color: rgba(34, 34, 34, 0.8);
+    background-color: white;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: white;
+    color: #222222;
   }
   #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
-    color: #8cfd0f;
+    color: #fdcc52;
   }
   #mainNav.navbar-shrink .navbar-nav > li > a,
   #mainNav.navbar-shrink .navbar-nav > li > a:focus {
-    color: white;
+    color: #222222;
   }
   #mainNav.navbar-shrink .navbar-nav > li > a:hover,
   #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
-    color: #49fb35;
+    color: #fdcc52;
   }
 }
 
@@ -157,7 +154,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background-color: black;
+  background: url("../img/bg-pattern.png"), #7b4397;
+  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
 }
 
 header.masthead .header-content {
@@ -188,7 +187,7 @@ header.masthead .device-container .screen img {
     padding-bottom: 0;
   }
   header.masthead .header-content {
-    padding-top: 200;
+    margin-bottom: 0;
     text-align: left;
   }
   header.masthead .header-content h1 {
@@ -199,64 +198,209 @@ header.masthead .device-container .screen img {
   }
 }
 
-section.highlight {
+section.download {
   position: relative;
   padding: 150px 0;
-  background: url("../img/WorldMap for PPT_20180327.png") no-repeat fixed center;
-  background-color: black;
-  opacity: 0.8;
-  filter: alpha(opacity=80);
+}
+
+section.download h2 {
+  font-size: 50px;
+  margin-top: 0;
+}
+
+section.download .badges .badge-link {
+  display: block;
+  margin-bottom: 25px;
+}
+
+section.download .badges .badge-link:last-child {
+  margin-bottom: 0;
+}
+
+section.download .badges .badge-link img {
+  height: 60px;
 }
 
 @media (min-width: 768px) {
-  section.highlight .badges .badge-link {
+  section.download .badges .badge-link {
     display: inline-block;
     margin-bottom: 0;
   }
 }
 
 @media (min-width: 768px) {
-  section.highlight h2 {
+  section.download h2 {
     font-size: 70px;
   }
 }
 
-section.products {
-  position: relative;
-  background-color: black;
-  opacity: 0.6;
-  filter: alpha(opacity=60);
+section.features .section-heading {
+  margin-bottom: 100px;
 }
 
-section.technology {
+section.features .section-heading h2 {
+  margin-top: 0;
+}
+
+section.features .section-heading p {
+  margin-bottom: 0;
+}
+
+section.features .device-container,
+section.features .feature-item {
+  max-width: 325px;
+  margin: 0 auto;
+}
+
+section.features .device-container {
+  margin-bottom: 100px;
+}
+
+@media (min-width: 992px) {
+  section.features .device-container {
+    margin-bottom: 0;
+  }
+}
+
+section.features .feature-item {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+
+section.features .feature-item h3 {
+  font-size: 30px;
+}
+
+section.features .feature-item i {
+  font-size: 80px;
+  display: block;
+  margin-bottom: 15px;
+  background: -webkit-linear-gradient(to left, #7b4397, #dc2430);
+  background: linear-gradient(to left, #7b4397, #dc2430);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+section.cta {
   position: relative;
-  background-color: black;
+  padding: 250px 0;
+  background-image: url("../img/bg-cta.jpg");
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+section.cta .cta-content {
+  position: relative;
+  z-index: 1;
+}
+
+section.cta .cta-content h2 {
+  font-size: 50px;
+  max-width: 450px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  section.cta .cta-content h2 {
+    font-size: 80px;
+  }
+}
+
+section.cta .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 section.contact {
-  position: relative;
-  padding: 50px 0;
-  background: url("../img/WorldMap for PPT_20180327.png") no-repeat fixed center;
-  background-color: black;
+  text-align: center;
+}
+
+section.contact h2 {
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+section.contact h2 i {
+  color: #dd4b39;
+}
+
+section.contact ul.list-social {
+  margin-bottom: 0;
+}
+
+section.contact ul.list-social li a {
+  font-size: 40px;
+  line-height: 80px;
+  display: block;
+  width: 80px;
+  height: 80px;
+  color: white;
+  border-radius: 100%;
+}
+
+section.contact ul.list-social li.social-twitter a {
+  background-color: #1da1f2;
+}
+
+section.contact ul.list-social li.social-twitter a:hover {
+  background-color: #0d95e8;
+}
+
+section.contact ul.list-social li.social-facebook a {
+  background-color: #3b5998;
+}
+
+section.contact ul.list-social li.social-facebook a:hover {
+  background-color: #344e86;
+}
+
+section.contact ul.list-social li.social-google-plus a {
+  background-color: #dd4b39;
+}
+
+section.contact ul.list-social li.social-google-plus a:hover {
+  background-color: #d73925;
 }
 
 footer {
-  padding: 100px 0;
-  background-color: black;
+  padding: 25px 0;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #222222;
 }
 
 footer p {
-  color:white;
+  font-size: 12px;
+  margin: 0;
+}
+
+footer ul {
+  margin-bottom: 0;
+}
+
+footer ul li a {
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
+  text-decoration: none;
 }
 
 .bg-primary {
-  background-color: #385723;
-    background-image:
-      radial-gradient(
-        circle at bottom right,
-        #385723,
-        #000000 30%
-      );
+  background: #fdcc52;
+  background: -webkit-linear-gradient(#fdcc52, #fdc539);
+  background: linear-gradient(#fdcc52, #fdc539);
 }
 
 .text-primary {
@@ -290,11 +434,4 @@ footer p {
 .btn-xl {
   font-size: 11px;
   padding: 15px 45px;
-}
-
-.products-title {
-  color:#8cfd0f;
-  float:left;
-  margin-top:100px;
-  width:65%;
 }
